[Build] Fix test-data-manger after migration to `test-inputs-check-v2`
The `updateTestData` task forwards all system properties from the `test` task, including those enabling test instrumentation.

To fix the issue, we filter our properties starting with `test.instrumenter.`

The very similar workaround has been implemented back then for `test-inputs-check` v1